@@ -1,3 +1,10 @@
+Tue Dec 10 00:41:42 2013  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* ext/thread/thread.c: [DOC] add call-seq alias for Queue#enq, #<<, etc.
+
+	* ext/thread/thread.c (Init_thread): use rb_define_alias instead of
+	  rb_alias to document alias.
+
 Mon Dec  9 20:00:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
 
 	* internal.h (RCLASS_SERIAL): Add RCLASS_SERIAL as a convenience
